correct alignment for tooltips

--- a/css/weather34dashboard.dark.css
+++ b/css/weather34dashboard.dark.css
@@ -142,7 +142,7 @@ background: -o-linear-gradient(top, rgba(255, 108, 52, 1) 0%, rgba(255, 108, 52,
 background: -ms-linear-gradient(top, rgba(255, 108, 52, 1) 0%, rgba(255, 108, 52, 1) 49%, rgba(6, 162, 177, 1) 49%, rgba(6, 162, 177, 1) 49%, rgba(6, 162, 177, 1) 100%);
 background: linear-gradient(to bottom, rgba(255, 108, 52, 1) 0%, rgba(255, 108, 52, 1) 49%, rgba(6, 162, 177, 1) 49%, rgba(6, 162, 177, 1) 49%, rgba(6, 162, 177, 1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='rgba(255, 108, 52, 1)', endColorstr='rgba(6, 162, 177, 1)', GradientType=0 );
-top:100%;margin-top:12px;padding:0px;color:#fff;line-height:1.5;width:80px;margin-left:-24px;-webkit-border-radius:3px;border-radius:3px;font-size:1.2em;font-weight:700;z-index:9999999;font-family: Arial, Helvetica, sans-serif}
+top:100%;margin-top:12px;padding:0px;color:#fff;line-height:1.5;width:80px;margin-left:-44px;-webkit-border-radius:3px;border-radius:3px;font-size:1.2em;font-weight:700;z-index:9999999;font-family: Arial, Helvetica, sans-serif}
 .weather34tipty:hover:after,.weather34tipty:hover:before{transition:all .4s ease .2s;visibility:visible;z-index:9999999;opacity:1}.weather34tipty:hover:after{margin-top:-10px;z-index:9999999;}.weather34tipty:hover:before a{margin-top:0;font-size:12px;}
 
 .weather34tipcelsius{position:absolute;box-sizing:border-box;margin-left:-20px;top:10px}
